--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@svgr/cli": "^5.4.0",
+    "blockly": "^3.20200924.3",
     "clsx": "^1.1.1",
     "cra-template": "1.0.3",
+    "d3": "^6.2.0",
     "formik": "^2.1.5",
+    "js-interpreter": "^2.2.0",
     "less": "^3.12.2",
     "node-sass": "4.14.1",
+    "python-shell": "^2.0.3",
     "react": "^16.13.1",
+    "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.4.1",
     "react-player": "^2.6.2",
@@ -23,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "cp -r node_modules/blockly/media public/media"
   },
   "eslintConfig": {
     "extends": "react-app"
