--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "4.14.1",
     "python-shell": "^2.0.3",
     "react": "^16.13.1",
+    "react-code-blocks": "^0.0.8",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.4.1",
