--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@svgr/cli": "^5.4.0",
+    "acorn": "^8.0.4",
     "blockly": "^3.20200924.3",
     "clsx": "^1.1.1",
     "cra-template": "1.0.3",
@@ -29,8 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "cp -r node_modules/blockly/media public/media"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
