--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-code-blocks": "^0.0.8",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
+    "react-material-ui-carousel": "^2.1.1",
     "react-particles-js": "^3.4.1",
     "react-player": "^2.6.2",
     "react-router-dom": "^5.2.0",
